kubernetes/grafana-loki/manifest/minio/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
      app.kubernetes.io/part-of: minio
  template:
    metadata:
      name: minio
      labels:
        app.kubernetes.io/name: minio
        app.kubernetes.io/part-of: minio
    spec:
      automountServiceAccountToken: false
      containers:
        - name: minio
          image: minio/minio:RELEASE.2023-07-18T17-49-40Z
          command:
            - minio
            - server
            - /data
            - --address
            - ':9000'
            - --console-address
            - ':9001'
          ports:
            - name: s3-api
              containerPort: 9000
              hostPort: 9000
              protocol: TCP
            - name: dashboard
              containerPort: 9001
              hostPort: 9001
              protocol: TCP
          volumeMounts:
            - name: minio-volume-data
              mountPath: /data
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 200m
              memory: 500Mi

          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      terminationGracePeriodSeconds: 60
      volumes:
        - name: minio-volume-data
          persistentVolumeClaim:
            claimName: minio-volume-claim
