kubernetes/grafana-loki/manifest/minio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: minio
spec:
  ports:
    - name: s3-api
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: dashboard
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: minio
