kubernetes/grafana-loki/manifest/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: minio
spec:
  ingressClassName: ambassador
  rules:
    - host: minio-s3.local.com
      http:
        paths:
          - backend:
              service:
                name: s3-api
                port:
                  name: s3-api
            path: /s3-api
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dashboard
                port:
                  name: dashboard
            path: /
            pathType: ImplementationSpecific
